--- a/frontend/src/app/login/login.component.css
+++ b/frontend/src/app/login/login.component.css
@@ -1,10 +1,14 @@
 .container{
     display: flex;
     width:100%;
-    height: 100%;
+    height: 60vh;
     gap:25px;
 }
 .bg-img{
-    margin-right: 15%;
-    border: 2px solid black;
+    margin-right: 8%;
+    
+}
+.container .bg-img img{
+    height: 90vh;
+    width: 50vw;
 }
